--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
         <!-- <script src="js/materialize.js"></script> -->
         <script src="js/materialize.min.js"></script>
         <!-- <script src="js/aws-sdk-2.251.1.min.js"></script> -->
+        <script src="js/sweetalert2.all.min.js" defer></script>
 
         <script src="js/underscore.js"></script>
         <script src="js/fuzzyAutocomplete.js"></script>
