Big spring cleaning

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                     <div class="row">
                         <div class="input-field col s12 ">
                             <input type="text" id="autocomplete-input" class="autocomplete">
-                            <label for="autocomplete-input">Meeting Room</label>
+                            <label for="autocomplete-input">Find Room</label>
                         </div>
                     </div>
                 </div>
