validation but now autocomplete is broken

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
         <!-- CSS  -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
     <body>
@@ -20,7 +20,7 @@
                     <div class="row">
                         <div class="input-field col s12 ">
                             <input type="text" id="autocomplete-input" class="autocomplete">
-                            <label for="autocomplete-input">Find Room</label>
+                            <label for="autocomplete-input" class="active">Find Room</label>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
         <script src="js/string_score.js"></script>
         <script src="js/jquery-2.1.1.min.js"></script>
         <!-- <script src="js/materialize.js"></script> -->
-        <script src="js/materialize.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <!-- <script src="js/aws-sdk-2.251.1.min.js"></script> -->
         <script src="js/sweetalert2.all.min.js" defer></script>
 
