footer and some stuff

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,27 @@
 
 
 
+        <footer >
+            <div class="container">
+                <hr/>
+                <div class="row">
+                    <div class="left-align valign-wrapper">
+                        <a style="padding: 5px 5px;" class="" href="#!">
+                            <i class="material-icons tiny">add_circle</i>
+                            Add Room</a>
+                        <a style="padding: 5px 5px;" class="" href="#!">
+                            <i class="material-icons tiny">list</i>
+                            All Rooms</a>
+                        <a style="padding: 5px 5px;" class="" href="#!">
+                            <i class="material-icons tiny">help_outline</i>
+                            About</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
+
         <!--  Scripts-->
         <script src="js/string_score.js"></script>
         <script src="js/jquery-2.1.1.min.js"></script>
