--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                         <a style="padding: 5px 5px;" class="" href="#!">
                             <i class="material-icons tiny">add_circle</i>
                             Add Room</a>
-                        <a style="padding: 5px 5px;" class="" href="#!">
+                        <a style="padding: 5px 5px;" class="" href="#/roomlist">
                             <i class="material-icons tiny">list</i>
                             All Rooms</a>
                         <a style="padding: 5px 5px;" class="" href="#!">
