--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,13 @@
                 <hr/>
                 <div class="row">
                     <div class="left-align valign-wrapper">
-                        <a style="padding: 5px 5px;" class="" href="#!">
+                        <a style="padding: 5px 5px;" class="" href="#/rooms/new">
                             <i class="material-icons tiny">add_circle</i>
                             Add Room</a>
                         <a style="padding: 5px 5px;" class="" href="#/roomlist">
                             <i class="material-icons tiny">list</i>
                             All Rooms</a>
-                        <a style="padding: 5px 5px;" class="" href="#!">
+                        <a style="padding: 5px 5px;" class="" href="#/about">
                             <i class="material-icons tiny">help_outline</i>
                             About</a>
                     </div>
