--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
                 <hr/>
                 <div class="row">
                     <div class="left-align valign-wrapper">
-                        <a style="padding: 5px 5px;" class="" href="#/rooms/new">
+                        <a style="padding: 5px 5px;" class="" href="#/newroom">
                             <i class="material-icons tiny">add_circle</i>
                             Add Room</a>
                         <a style="padding: 5px 5px;" class="" href="#/roomlist">
