--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 
         <script src="js/fuzzyAutocomplete.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/ImageTools.js"></script>
 
         <script>
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
