--- a/public/index.html
+++ b/public/index.html
@@ -78,10 +78,10 @@
         <script src="js/jquery-2.1.1.min.js"></script>
         <!-- <script src="js/materialize.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-        <script src="js/sweetalert2.all.min.js" defer></script>
 
         <script src="js/fuzzyAutocomplete.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/sweetalert2.all.min.js"></script>
         <script src="js/ImageTools.js"></script>
 
         <script>
